# Analyze_Market

./: .gitignore  CMakeLists.txt  README.md  dummy_stock_data.csv  mainwindow.cpp  mainwindow.h  mainwindow.ui
